# autoanki

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cli.py  conftest.py  generator.py  parser.py  pyproject.toml  test_generator.py  test_parser.py  wikt.py
cli/: __init__.py  cli.py
core/: __init__.py  generator.py  parser.py
display/: table_display.py
metrics/: docker-compose.yml  prometheus.yml
tests/: test_cli.py  test_generator.py  test_ipa_service.py  test_parser.py  test_session_manager.py  test_wikitext_extractor.py
tests/integration/: test_cli.py  test_transcribe.py
wiktionary/: __init__.py  ipa_service.py  metrics.py  session_manager.py  transcriber.py  wikitext_extractor.py  wikt.py
