[project]
name = "autoanki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.10",
    "prettytable>=3.11.0",
    "prometheus-client>=0.21.0",
]

[tool.uv]
dev-dependencies = [
    "debugpy>=1.8.7",
    "jedi-language-server>=0.41.4",
    "pyright>=1.1.385",
    "pytest>=8.3.3",
]
