[project]
name = "autoanki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.10",
    "prometheus-client>=0.21.0",
    "typer>=0.12.5",
]

[tool.uv]
dev-dependencies = [
    "debugpy>=1.8.7",
    "jedi-language-server>=0.41.4",
    "mypy>=1.12.0",
    "pre-commit>=4.0.1",
    "pyright>=1.1.385",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
addopts = [
  "--cov",
  "--cov-report=term-missing",
  "--cov-report=xml:coverage.xml",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
relative_files = true
omit = [
    'tests/*',
]

[tool.ruff]
lint.select = ["ALL"]
